@@ -15,6 +15,8 @@
   (such as 1.3) as well as alphabetical characters (A3)
 * segway: fix bug: --dry-run causes traceback during training
 * segway: --distribution=arcsinh_norm becomes --distribution=asinh_norm
+* segway: now creates log/segway.sh to report arguments from which Segway was called
+* segway: now prints out Segway distribution version to log files
 
 0.1.12:
 
